NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/NATT_ItemPriceStaging__c.object-meta.xml
<CustomObject>
    <description>Staging object for imported PartsNet item pricing from JDE (RCGWEB23 &amp; RCGWEB26). Includes standard list prices, customer-specific item prices, and quantity price tiers</description>
    <label>NATT Item Price Staging</label>
    <nameField>
        <displayFormat>IPS-{0000000000}</displayFormat>
        <label>NATT Item Price Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NATT Item Price Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>