NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_BasisCode__c.field-meta.xml
<CustomField>
    <fullName>NATT_BasisCode__c</fullName>
    <description>Code that identifies the basis of the value in the List Price field. 3 represents Standard Cost, 5 represents Standard List Price. 

0    % of New Base Price
1    % of Base Price
2    % of Current Net Price
3    % of Cost
4    Cost Plus Amount
5    Add on Amount
6    Add on Variable Amount
7    Add on Formula Amount
8    Add on User Program Amount
9    Gross Profit Margin</description>
    <label>Basis Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>