NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_CustomerPriceGroup__c.field-meta.xml
<CustomField>
    <fullName>NATT_CustomerPriceGroup__c</fullName>
    <description>Specifies the customer price group</description>
    <label>Customer Price Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>