NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>NATT_EffectiveDate__c</fullName>
    <description>Date this price becomes effective</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>