NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>NATT_ItemNumber__c</fullName>
    <description>Unique number that identifies the item</description>
    <label>Item Number</label>
    <length>48</length>
    <type>Text</type>
</CustomField>