NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_ItemPriceGroup__c.field-meta.xml
<CustomField>
    <fullName>NATT_ItemPriceGroup__c</fullName>
    <description>Identifies the sales price group number of the item</description>
    <label>Item Price Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>