NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_ItemPriceKeyId__c.field-meta.xml
<CustomField>
    <fullName>NATT_ItemPriceKeyId__c</fullName>
    <description>JDE key ID for the item price</description>
    <externalId>true</externalId>
    <label>Item Price Key ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>