NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_ItemPriceType__c.field-meta.xml
<CustomField>
    <fullName>NATT_ItemPriceType__c</fullName>
    <description>Alphanumeric code indicating the type of price (i.e. SRP - Standard Retail Price, INTPRC - Internal Price)</description>
    <label>Item Price Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>