NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_ListPrice__c.field-meta.xml
<CustomField>
    <fullName>NATT_ListPrice__c</fullName>
    <description>Contains either the list price, standard cost or Customer Item price as indicated by value in Item Price Type field</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>