NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_Product__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>NATT Item Price Staging</relationshipLabel>
    <relationshipName>NATT_Item_Price_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>