NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/fields/NATT_UOM__c.field-meta.xml
<CustomField>
    <fullName>NATT_UOM__c</fullName>
    <description>Item&apos;s unit of measure</description>
    <label>Unit of Measure</label>
    <length>16</length>
    <type>Text</type>
</CustomField>