NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/recordTypes/CTM_Item_Cost.recordType-meta.xml
<RecordType>
    <fullName>CTM_Item_Cost</fullName>
    <active>true</active>
    <label>CTM Item Cost</label>
</RecordType>