NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/recordTypes/CTM_Item_Price.recordType-meta.xml
<RecordType>
    <fullName>CTM_Item_Price</fullName>
    <active>true</active>
    <label>CTM Item Price</label>
</RecordType>