NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/recordTypes/NAOCAP.recordType-meta.xml
<RecordType>
    <fullName>NAOCAP</fullName>
    <active>true</active>
    <label>NAOCAP</label>
</RecordType>