NATTQA-ENV/force-app/main/default/objects/NATT_ItemPriceStaging__c/recordTypes/NATT_TES.recordType-meta.xml
<RecordType>
    <fullName>NATT_TES</fullName>
    <active>true</active>
    <label>NATT TES</label>
</RecordType>